@@ -212,7 +212,6 @@ val errorProneJvmArgs = listOf(
 val baselineJvmArgsProvider = object : CommandLineArgumentProvider {
     override fun asArguments(): Iterable<String> = listOf(
         "-ea",  // Enable assertions
-        "--add-modules=jdk.incubator.vector",
         "-Dbrokk.devmode=true"
     )
 }
@@ -334,7 +333,6 @@ tasks.withType<Test> {
     jvmArgs = listOf(
         "-ea",  // Enable assertions
         "-Xmx1G",  // minimum heap size
-        "--add-modules=jdk.incubator.vector",
         "-Dbrokk.devmode=true",
         "-XX:+HeapDumpOnOutOfMemoryError",
         "-XX:HeapDumpPath=./build/test-heap-dumps/"
